# CPy

./: .gitignore  Readme.md  main.c  pymodule.py  setup.py  utils.py
Python_C_API/: main.c  pymodule.py
cmake/: CMakeLists.txt  CPy
cmake/src/: main.c
cython_module/: main.c  main.py  pymodule.pyx  setup.py
cython_module/C_Function_for_Python_Array/: C_arraytest.c  C_arraytest.h
cython_module/modulehub/: example_cy.pyx
